             on AMD64 and Intel 64 platforms. An improperly validated 64-bit 
             value could be stored in the %RAX register, which could trigger an 
             out-of-bounds system call table access. An untrusted local user 
             could exploit this flaw to run code in the kernel 
             (ie a root privilege escalation). (CVE-2007-4573). 

--------------------------------------------------------------------------------

2007-09-27         Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.3
       * Support for kernels:
        2.6.5-7.286 (SLES 9),
        2.6.9-55.0.2.EL (RHEL 4),
        2.6.16.46-0.14 (SLES 10),
        2.6.18-8.1.8.el5 (RHEL 5),
        2.6.18.8 vanilla (kernel.org)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to recently discovered recovery problems, we do not recommend
        using patchless RHEL 4 clients with this or any earlier release.
       * Recommended e2fsprogs version: 1.40.2-cfs1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.

Severity   : minor
Bugzilla   : 12186
Description: Fix errors in lfs documentation
Details    : Fixes man pages

Severity   : enhancement
Bugzilla   : 3055
Description: Adaptive timeouts
Details    : RPC timeouts adapt to changing server load and network
	     conditions to reduce resend attempts and improve recovery time.

Severity   : enhancement
Bugzilla   : 12192
Description: llapi_file_create() does not allow some changes
Details    : add llapi_file_open() that allows specifying the file creation
	     mode and open flags, and also returns an open file handle.

Severity   : enhancement
Bugzilla   : 12743
Description: df doesn't work properly if diskfs blocksize != 4K
Details    : Choose biggest blocksize of OST's as the LOV's blocksize.

Severity   : normal